SONAR-15397 Fix Issue tags aren't filtered by branch